--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
     "zustand": "^4.5.0",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "expo-updates": "~0.24.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
