Test with custom eas.json file

--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,9 @@
 {
   "build": {
-    "image": "default",
+    "image": {
+      "android": "default",
+      "ios": "default"
+    },
     "development": {
       "developmentClient": true,
       "distribution": "internal",
