Test with custom eas.json file

--- a/eas.json
+++ b/eas.json
@@ -1,8 +1,8 @@
 {
   "build": {
     "image": {
-      "android": "default",
-      "ios": "default"
+      "android": { "image": "default" },
+      "ios": { "image": "default" }
     },
     "development": {
       "developmentClient": true,
